   - ofaTVAFormPage, ofaTVARecordPage: have a button to switch to each other (todo #1512).
   - ofaTVAFormPage: the form is now duplicable (todo #1509).
   - ofaTVAFormProperties: improve properties update.
   - ofaTVARecordProperties: better center the label (todo #1515).
   - ofaTVARecordProperties: review life cycle and dynamic of the status (todo #1511).

 Bug fixes:

   - ofaITVColumnable: protect column addressing against false identifiers.
   - ofaRestoreAssistant: fix ofaIDBDossierMeta ref count (todo #1507).
   - ofaRestoreAssistant: fix ofaIDBExerciceMeta occurrence count (todo #1508).
   - ofaTVAFormProperties: fix new record creation.
   - ofaTVARecordProperties: fix operation date setting (todo #1514).
   - ofaUnreconcilPage: disconnect the signal handler (todo #1496).
   - ofaUnsettledPage: disconnect the signal handler (todo #1496).
   - ofoBat: fix new record insertion.
   - ofoTVAForm: fix new record insertion.
   - ofoTVARecord: fix new record insertion.

 Other changes:

   - myDndWindow, ofaNomodalPage: homogeneize debug messages.
   - myIBin: has its own 'my-ibin-changed' signal (todo #1501).
   - mySettings: have an info message instead of debug when file doesn't exist.
   - ofaAccentryStore: becomes a dossier-level singleton.
   - ofaDossierCollection: ofa_dossier_collection_remove_meta(): new method.
   - ofaDossierStore: add exercice localized label column.
   - ofaExerciceTreeview: now uses ofaDossierStore.
   - ofo-entry-fec.{c,h}: removed files.

-----------------------------------------------------------------------
 Version 0.73
 ============

 Released on 2017-11-12

 Total files count:    849 files
 Total lines count: 587078 lines
 maintainer/run-distcheck.sh: real	7m13.079s

 New features and improvements:

   RECURRENT DB Model v10

   - Recurrent model: have creation user and timestamp (todo #1488).
   - Recurrent generation: let the user choose the generation mode.
   - Recurrent run: take a copy of model data at creation time.